--- a/PythonProject/news_portal/templates/base.html
+++ b/PythonProject/news_portal/templates/base.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 {% load static %}
+{% load cache %}
 <html>
 <head>
+    {% cache 20 head %}
     <title>{% block title %}Title{% endblock title %}</title>
     <link href="{% static 'bootstrap-5.3.3-dist/css/bootstrap.min.css' %}" rel="stylesheet" />
+    {% endcache %}
 </head>
 <body>
+    {% cache 20 navbar %}
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> </a>
@@ -35,10 +39,11 @@
 <!--                <a class="dropdown-item" href="#">Пункт 4</a>-->
               </div>
             </li>
-          </ul>
+           </ul>
 
         </div>
       </div>
+        {% endcache %}
     </nav>
 
     <div class="container">{% block content %}Base page django!{% endblock content %}</div>
